Начало начал
Добавление команд /my_pet и /pet_info